--- a/src/Our.Umbraco.InnerContent/Our.Umbraco.InnerContent.csproj
+++ b/src/Our.Umbraco.InnerContent/Our.Umbraco.InnerContent.csproj
@@ -94,6 +94,7 @@
     <Content Include="Web\UI\App_Plugins\InnerContent\js\innercontent.js" />
     <Content Include="Web\UI\App_Plugins\InnerContent\views\innercontent.create.html" />
     <Content Include="Web\UI\App_Plugins\InnerContent\views\innercontent.dialog.html" />
+    <Content Include="Web\UI\App_Plugins\InnerContent\views\innercontent.doctypepicker.overlay.html" />
     <Content Include="Web\UI\App_Plugins\InnerContent\views\innercontent.unsavedchanges.html" />
     <Content Include="Web\UI\App_Plugins\InnerContent\views\innercontent.overlay.html" />
     <Content Include="Web\UI\App_Plugins\InnerContent\views\innercontent.doctypepicker.html" />
